@version $Id$

* 2.0.0 to be Released 2007-07-xx

    2007-06-22 Vlad Skarzhevskyy
    * Merged J9 MIDP compatibility enhancements suggested by Kobus Grobler
    * bluecove_ce.dll WIDCOMM Stack on WinCE

    2007-06-20 Vlad Skarzhevskyy
    * Published version 2.0.0-b2
    * Moved large Winsock discovery buffers to heap instead of stack to improve stability
    * Fixed WIDCOMM Write Flow to pass all tests

    2007-06-15 Vlad Skarzhevskyy
    * Published version 2.0.0-b1
    * BlueSoleil Stack working Server implementation

    2007-06-09 Vlad Skarzhevskyy
    * BlueSoleil Stack client using overlapped I/O

    2007-06-07 Vlad Skarzhevskyy
    * intelbth.dll build by VC2005 Configuration "Win32 Release" for Microsoft and BlueSoleil Bluetooth Stack
    * bluecove.dll build by VC6 Configuration "Win32 Release"  for WIDCOMM Bluetooth Stacks
    * FIFO ReceiveBuffer for WIDCOMM Stack

    2007-06-03 Vlad Skarzhevskyy
    * WIDCOMM Stack RFCOMM working Server implementation

    2007-05-29 Vlad Skarzhevskyy
    * WIDCOMM Stack RFCOMM Client implementation stable

    2007-05-18 Vlad Skarzhevskyy
    * Initial BlueSoleil Stack RFCOMM Client implementation

    2007-05-15 Vlad Skarzhevskyy
    * InputStream.read() return -1 on gracefully closed Connection
    * Interface com.intel.bluetooth.BluetoothStack to support Stacks other than Microsoft winsock
    * Initial WIDCOMM Stack RFCOMM Client implementation
    * LocalDevice.getProperty() additional properties: bluecove, bluecove.stack, bluecove.radio.manufacturer, bluecove.radio.version
    * System property "bluecove.stack" to force Stack, values widcomm, bluesoleil or winsock

* 1.2.3 released 2007-05-11

    2007-05-05 Vlad Skarzhevskyy
    * acceptAndOpen will update ServiceRecord in SDDB
    * Implemented LocalDevice.updateRecord
    * LocalDevice.getProperty("bluecove");  will return bluecove version
    * implement set/getDiscoverable and getDeviceClass() function of LocalDevice
    * Support IBM J9 JVM